# rust_audio_visualiser

./: Cargo.toml
src/: main.rs
src/components/: mod.rs  tap.rs  visualiser.rs
